cluster/forgejo/forgejo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/part-of: forgejo
    argocd.argoproj.io/managed-by: openshift-gitops
