cluster/forgejo/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
