cluster/forgejo/forgejo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: forgejo
spec:
  subdomain: forgejo
  to:
    kind: Service
    name: forgejo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
